add tbats model (non used)

--- a/v2_modeling_tbats.ipynb
+++ b/v2_modeling_tbats.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,9 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from statistics import multimode\n"
+    "from statistics import multimode\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n"
    ]
   },
   {
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +352,7 @@
        "[5 rows x 228 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +503,7 @@
        "[1 rows x 228 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +649,7 @@
        "[1 rows x 228 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,21 +677,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hingryd/Documents/Lighthouse/DS/venv/lib/python3.10/site-packages/tbats/error/ExceptionHandler.py:13: ModelWarning: Optimization did not converge. Forecasts may be unstable.\n",
+      "  warnings.warn(message, warning_type)\n",
+      "/home/hingryd/Documents/Lighthouse/DS/venv/lib/python3.10/site-packages/tbats/error/ExceptionHandler.py:13: ModelWarning: Optimization did not converge. Forecasts may be unstable.\n",
+      "  warnings.warn(message, warning_type)\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 5\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfor\u001b[39;00m country \u001b[39min\u001b[39;00m df_model\u001b[39m.\u001b[39mcolumns: \n\u001b[1;32m      3\u001b[0m     model_tbats \u001b[39m=\u001b[39m TBATS(use_trend \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m      4\u001b[0m                         seasonal_periods \u001b[39m=\u001b[39m [ \u001b[39m365\u001b[39m\u001b[39m*\u001b[39m\u001b[39m4\u001b[39m])\n\u001b[0;32m----> 5\u001b[0m     model_tbats \u001b[39m=\u001b[39m model_tbats\u001b[39m.\u001b[39;49mfit(train_data[country])\n",
+      "File \u001b[0;32m~/Documents/Lighthouse/DS/venv/lib/python3.10/site-packages/tbats/abstract/Estimator.py:98\u001b[0m, in \u001b[0;36mEstimator.fit\u001b[0;34m(self, y)\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39mallclose(y, y[\u001b[39m0\u001b[39m]):\n\u001b[1;32m     96\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcontext\u001b[39m.\u001b[39mcreate_constant_model(y[\u001b[39m0\u001b[39m])\u001b[39m.\u001b[39mfit(y)\n\u001b[0;32m---> 98\u001b[0m best_model \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_do_fit(y)\n\u001b[1;32m    100\u001b[0m \u001b[39mfor\u001b[39;00m warning \u001b[39min\u001b[39;00m best_model\u001b[39m.\u001b[39mwarnings:\n\u001b[1;32m    101\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcontext\u001b[39m.\u001b[39mget_exception_handler()\u001b[39m.\u001b[39mwarn(warning, error\u001b[39m.\u001b[39mModelWarning)\n",
+      "File \u001b[0;32m~/Documents/Lighthouse/DS/venv/lib/python3.10/site-packages/tbats/tbats/TBATS.py:78\u001b[0m, in \u001b[0;36mTBATS._do_fit\u001b[0;34m(self, y)\u001b[0m\n\u001b[1;32m     76\u001b[0m non_seasonal_model \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_choose_model_from_possible_component_settings(y, components_grid\u001b[39m=\u001b[39mcomponents_grid)\n\u001b[1;32m     77\u001b[0m harmonics_choosing_strategy \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcontext\u001b[39m.\u001b[39mcreate_harmonics_choosing_strategy()\n\u001b[0;32m---> 78\u001b[0m chosen_harmonics \u001b[39m=\u001b[39m harmonics_choosing_strategy\u001b[39m.\u001b[39;49mchoose(y, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcreate_most_complex_components())\n\u001b[1;32m     79\u001b[0m components_grid \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_prepare_components_grid(seasonal_harmonics\u001b[39m=\u001b[39mchosen_harmonics)\n\u001b[1;32m     80\u001b[0m seasonal_model \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_choose_model_from_possible_component_settings(y, components_grid\u001b[39m=\u001b[39mcomponents_grid)\n",
+      "File \u001b[0;32m~/Documents/Lighthouse/DS/venv/lib/python3.10/site-packages/tbats/tbats/HarmonicsChoosingStrategy.py:24\u001b[0m, in \u001b[0;36mHarmonicsChoosingStrategy.choose\u001b[0;34m(self, y, components)\u001b[0m\n\u001b[1;32m     21\u001b[0m max_harmonics \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcalculate_max(components\u001b[39m.\u001b[39mseasonal_periods)\n\u001b[1;32m     23\u001b[0m \u001b[39mfor\u001b[39;00m season_index \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m0\u001b[39m, \u001b[39mlen\u001b[39m(components\u001b[39m.\u001b[39mseasonal_periods)):\n\u001b[0;32m---> 24\u001b[0m     best_model \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mchoose_for_season(\n\u001b[1;32m     25\u001b[0m         season_index\u001b[39m=\u001b[39;49mseason_index,\n\u001b[1;32m     26\u001b[0m         max_harmonic\u001b[39m=\u001b[39;49mmax_harmonics[season_index],\n\u001b[1;32m     27\u001b[0m         best_model_so_far\u001b[39m=\u001b[39;49mbest_model\n\u001b[1;32m     28\u001b[0m     )\n\u001b[1;32m     29\u001b[0m \u001b[39mreturn\u001b[39;00m best_model\u001b[39m.\u001b[39mparams\u001b[39m.\u001b[39mcomponents\u001b[39m.\u001b[39mseasonal_harmonics\n",
+      "File \u001b[0;32m~/Documents/Lighthouse/DS/venv/lib/python3.10/site-packages/tbats/tbats/HarmonicsChoosingStrategy.py:82\u001b[0m, in \u001b[0;36mHarmonicsChoosingStrategy.choose_for_season\u001b[0;34m(self, season_index, max_harmonic, best_model_so_far)\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_components \u001b[39m=\u001b[39m best_model_so_far\u001b[39m.\u001b[39mparams\u001b[39m.\u001b[39mcomponents\n\u001b[1;32m     81\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcontext\u001b[39m.\u001b[39mmultiprocessing()\u001b[39m.\u001b[39mPool(processes\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchecking_range) \u001b[39mas\u001b[39;00m pool:\n\u001b[0;32m---> 82\u001b[0m     models \u001b[39m=\u001b[39m pool\u001b[39m.\u001b[39;49mmap(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_fit_model, harmonics_range)\n\u001b[1;32m     83\u001b[0m     pool\u001b[39m.\u001b[39mclose()\n\u001b[1;32m     84\u001b[0m \u001b[39mfor\u001b[39;00m model \u001b[39min\u001b[39;00m models:\n",
+      "File \u001b[0;32m/usr/lib/python3.10/multiprocessing/pool.py:367\u001b[0m, in \u001b[0;36mPool.map\u001b[0;34m(self, func, iterable, chunksize)\u001b[0m\n\u001b[1;32m    362\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmap\u001b[39m(\u001b[39mself\u001b[39m, func, iterable, chunksize\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    363\u001b[0m \u001b[39m    \u001b[39m\u001b[39m'''\u001b[39;00m\n\u001b[1;32m    364\u001b[0m \u001b[39m    Apply `func` to each element in `iterable`, collecting the results\u001b[39;00m\n\u001b[1;32m    365\u001b[0m \u001b[39m    in a list that is returned.\u001b[39;00m\n\u001b[1;32m    366\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m--> 367\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_map_async(func, iterable, mapstar, chunksize)\u001b[39m.\u001b[39;49mget()\n",
+      "File \u001b[0;32m/usr/lib/python3.10/multiprocessing/pool.py:768\u001b[0m, in \u001b[0;36mApplyResult.get\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    767\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 768\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[1;32m    769\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mready():\n\u001b[1;32m    770\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mTimeoutError\u001b[39;00m\n",
+      "File \u001b[0;32m/usr/lib/python3.10/multiprocessing/pool.py:765\u001b[0m, in \u001b[0;36mApplyResult.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    764\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mwait\u001b[39m(\u001b[39mself\u001b[39m, timeout\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m--> 765\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_event\u001b[39m.\u001b[39;49mwait(timeout)\n",
+      "File \u001b[0;32m/usr/lib/python3.10/threading.py:607\u001b[0m, in \u001b[0;36mEvent.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    605\u001b[0m signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_flag\n\u001b[1;32m    606\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m signaled:\n\u001b[0;32m--> 607\u001b[0m     signaled \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_cond\u001b[39m.\u001b[39;49mwait(timeout)\n\u001b[1;32m    608\u001b[0m \u001b[39mreturn\u001b[39;00m signaled\n",
+      "File \u001b[0;32m/usr/lib/python3.10/threading.py:320\u001b[0m, in \u001b[0;36mCondition.wait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    318\u001b[0m \u001b[39mtry\u001b[39;00m:    \u001b[39m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[39;00m\n\u001b[1;32m    319\u001b[0m     \u001b[39mif\u001b[39;00m timeout \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m--> 320\u001b[0m         waiter\u001b[39m.\u001b[39;49macquire()\n\u001b[1;32m    321\u001b[0m         gotit \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    322\u001b[0m     \u001b[39melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "#Forecasting Model\n",
-    "#Forecasting Model\n",
-    "#for country in df_model.columns: \n",
-    "model_tbats = TBATS(use_trend = True,\n",
-    "                    seasonal_periods = [ 365*4])\n",
-    "model_tbats = model_tbats.fit(train_data['United States'])"
+    "for country in df_model.columns: \n",
+    "    model_tbats = TBATS(use_trend = True,\n",
+    "                        seasonal_periods = [ 365*4])\n",
+    "    model_tbats = model_tbats.fit(train_data[country])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -711,15 +743,16 @@
    ],
    "source": [
     "# Predictions\n",
+    "for country in df_model.columns: \n",
     "\n",
-    "predictions_tbats = pd.Series(model_tbats.forecast(steps= len(test_data))).rename('tbats')\n",
-    "predictions_tbats.index = test_data.index\n",
+    "    predictions_tbats = pd.Series(model_tbats.forecast(steps= len(test_data[country]))).rename('tbats')\n",
+    "    predictions_tbats.index = test_data.index\n",
     "predictions_tbats.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -746,9 +779,10 @@
    "source": [
     "# Visualization\n",
     "#for country in df_model.columns: \n",
-    "train_data['United States']['2010-01-01':].plot(figsize = (9,6), legend = True)\n",
-    "test_data['United States'].plot(legend = True)\n",
-    "predictions_tbats.plot(legend = True)"
+    "#    plt.figure()\n",
+    "#    train_data[country]['2010-01-01':].plot(figsize=(9, 6), label=f\"{country} - Train\", legend=True)\n",
+    "#    test_data[country].plot(label=f\"{country} - Test\", legend=True)\n",
+    "#    predictions_tbats.plot(label=f\" TBATS - Predictions\", legend=True)"
    ]
   },
   {
@@ -765,30 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.31\n",
-      "2.39\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Model Assessment MAE and RSME\n",
-    "\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
-    "#for country in df_model.columns:\n",
-    "print(round(mean_absolute_error(test_data['United States'], predictions_tbats),2))\n",
-    "print(round(np.sqrt(mean_squared_error(test_data['United States'], predictions_tbats)),2))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -803,26 +814,43 @@
     }
    ],
    "source": [
-    "#MAPE function\n",
     "\n",
     "def MAPE(df_model_true, df_model_pred):\n",
     "    df_model_true, df_model_pred = np.array(df_model_true), np.array(df_model_pred)\n",
     "    return np.mean(np.abs((df_model_true - df_model_pred)/ df_model_true)) *100\n",
     "\n",
-    "#for country in df_model.columns:\n",
-    "MAPE(test_data['United States'], predictions_tbats)"
+    "metric_results = []\n",
+    "#loop for metrics mae, rmse and mape\n",
+    "for country in df_model.columns:\n",
+    "    mae = (round(mean_absolute_error(test_data[country], predictions_tbats[country]),2))\n",
+    "    rmse = (round(np.sqrt(mean_squared_error(test_data[country], predictions_tbats[country])),2))\n",
+    "    mape = (MAPE(test_data[country], predictions_tbats[country]))\n",
+    "    print(f\"Country: {country}\")\n",
+    "    print(f\"MAE: {mae}\")\n",
+    "    print(f\"RMSE: {rmse}\")\n",
+    "    print(f\"MAPE: {mape}\")\n",
+    "    print(\"=============\")\n",
+    "\n",
+    "    metrics_results.append({\n",
+    "        \"Country\": country,\n",
+    "        \"MAE\": mae,\n",
+    "        \"RMSE\": rmse,\n",
+    "        \"MAPE\": mape\n",
+    "\n",
+    "    })\n",
+    "metrics_tbats = pd.DataFrame(metrics_results)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Export forecasts for Holt-Winters"
+    "### Export forecasts for TBATS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
