--- a/Notebooks/Modelagem/v2_modeling_fb_prophet_all_countries.ipynb
+++ b/Notebooks/Modelagem/v2_modeling_fb_prophet_all_countries.ipynb
@@ -37,7 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_transposed_copy_inputting_v19 = pd.read_csv(r'Projeto/Data/Output/df_transposed_copy_inputting_v19.csv')\n"
+    "df_transposed_copy_inputting_v19 = pd.read_csv(r'../../Projeto/Data/Output/df_transposed_copy_inputting_v19.csv')\n"
    ]
   },
   {
@@ -1927,7 +1927,7 @@
     "    })\n",
     "\n",
     "metrics_prophet = pd.DataFrame(metrics_results)\n",
-    "metrics_prophet.to_csv('Projeto/Data/Metrics/metrics_prophet.csv', index = True)"
+    "metrics_prophet.to_csv('../../Projeto/Data/Metrics/metrics_prophet.csv', index = True)"
    ]
   },
   {
@@ -1945,7 +1945,7 @@
    "source": [
     "## Export forecast\n",
     "\n",
-    "df_pred_prophet.to_csv('Projeto/Data/Output/predictions_prophet_all.csv', index = True)"
+    "df_pred_prophet.to_csv('../../Projeto/Data/Output/predictions_prophet_all.csv', index = True)"
    ]
   },
   {
