--- a/Notebooks/Modelagem/v2_modeling_final_metrics.ipynb
+++ b/Notebooks/Modelagem/v2_modeling_final_metrics.ipynb
@@ -43,12 +43,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "metrics_prophet = pd.read_csv(r'Projeto/Data/Metrics/metrics_prophet.csv')\n",
-    "metrics_hw = pd.read_csv(r'Projeto/Data/Metrics/metrics_hw.csv')\n",
-    "metrics_pred_simple_exp_smoot = pd.read_csv(r'Projeto/Data/Metrics/metrics_pred_simple_exp_smoot.csv')\n",
-    "metrics_predictions_sarimax_exog = pd.read_csv(r'Projeto/Data/Metrics/metrics_predictions_sarimax_exog.csv')\n",
-    "metrics_predictions_sarimax_no_exog = pd.read_csv(r'Projeto/Data/Metrics/metrics_predictions_sarimax_no_exog.csv')\n",
-    "metrics_predictions_autoarima = pd.read_csv(r'Projeto/Data/Metrics/metrics_predictions_autoarima.csv')\n"
+    "metrics_prophet = pd.read_csv(r'../../Projeto/Data/Metrics/metrics_prophet.csv')\n",
+    "metrics_hw = pd.read_csv(r'../../Projeto/Data/Metrics/metrics_hw.csv')\n",
+    "metrics_pred_simple_exp_smoot = pd.read_csv(r'../../Projeto/Data/Metrics/metrics_pred_simple_exp_smoot.csv')\n",
+    "metrics_predictions_sarimax_exog = pd.read_csv(r'../../Projeto/Data/Metrics/metrics_predictions_sarimax_exog.csv')\n",
+    "metrics_predictions_sarimax_no_exog = pd.read_csv(r'../../Projeto/Data/Metrics/metrics_predictions_sarimax_no_exog.csv')\n",
+    "metrics_predictions_autoarima = pd.read_csv(r'../../Projeto/Data/Metrics/metrics_predictions_autoarima.csv')\n"
    ]
   },
   {
@@ -69,7 +69,7 @@
     }
    ],
    "source": [
-    "df_transposed_copy_inputting_v19 = pd.read_csv(r'Projeto/Data/Output/df_transposed_copy_inputting_v19.csv')\n",
+    "df_transposed_copy_inputting_v19 = pd.read_csv(r'../../Projeto/Data/Output/df_transposed_copy_inputting_v19.csv')\n",
     "df_model = df_transposed_copy_inputting_v19.copy()\n",
     "df_model['year'] = pd.to_datetime(df_model['year'], format='ISO8601')\n",
     "df_model.set_index('year', inplace = True)\n",
@@ -933,7 +933,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final_metrics_cv.to_csv('Projeto/Data/Metrics/df_final_metrics_cv_sarima.csv', index = True)\n"
+    "df_final_metrics_cv.to_csv('../../Projeto/Data/Metrics/df_final_metrics_cv_sarima.csv', index = True)\n"
    ]
   },
   {
@@ -973,7 +973,7 @@
     "    })\n",
     "\n",
     "metrics_predictions_sarimax_cv = pd.DataFrame(metrics_results)\n",
-    "metrics_predictions_sarimax_cv.to_csv('Projeto/Data/Metrics/metrics_predictions_sarimax_cv.csv', index = True)"
+    "metrics_predictions_sarimax_cv.to_csv('../../Projeto/Data/Metrics/metrics_predictions_sarimax_cv.csv', index = True)"
    ]
   },
   {
@@ -8752,7 +8752,7 @@
     "average_metrics_per_country_prophet = df_metrics_cv_prophet1.groupby('country').mean()\n",
     "average_metrics_per_country_prophet.drop(['ds'], axis=0, inplace = True)\n",
     "# Salve as métricas em um arquivo ou faça o que for necessário\n",
-    "average_metrics_per_country_prophet.to_csv('Projeto/Data/Metrics/df_final_metrics_cv_prophet.csv', index=True)\n"
+    "average_metrics_per_country_prophet.to_csv('../../Projeto/Data/Metrics/df_final_metrics_cv_prophet.csv', index=True)\n"
    ]
   },
   {
@@ -8768,8 +8768,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_final_metrics_cv_prophet = pd.read_csv(r'Projeto/Data/Metrics/df_final_metrics_cv_prophet.csv')\n",
-    "df_final_metrics_cv_sarima = pd.read_csv(r'Projeto/Data/Metrics/metrics_predictions_sarimax_cv.csv')"
+    "df_final_metrics_cv_prophet = pd.read_csv(r'../../Projeto/Data/Metrics/df_final_metrics_cv_prophet.csv')\n",
+    "df_final_metrics_cv_sarima = pd.read_csv(r'../../Projeto/Data/Metrics/metrics_predictions_sarimax_cv.csv')"
    ]
   },
   {
